--- a/es5/src/app/components/main/main.html
+++ b/es5/src/app/components/main/main.html
@@ -1,5 +1,2 @@
 <app-navbar url-links="$ctrl.links"/>
-<div class="ui main container" ui-view></div>
-
-
-
+<div class="main container-fluid" ui-view></div>
