--- a/es5/src/app/index.css
+++ b/es5/src/app/index.css
@@ -5,7 +5,6 @@
   padding: 0.2em 0;
 }
 
-
 [ng-cloak] {
     display: none;
 }
@@ -13,17 +12,9 @@
 body {
     background-color: #FFFFFF;
 }
-.ui.menu .item img.logo {
-    margin-right: 1.5em;
+
+.main {
+    margin-top: 50px;
 }
-.main.container {
-    margin-top: 7em;
-}
-.wireframe {
-    margin-top: 2em;
-}
-.ui.footer.segment {
-    margin: 5em 0em 0em;
-    padding: 5em 0em;
-}
+
 
