--- a/es5/src/app/components/courses/course.html
+++ b/es5/src/app/components/courses/course.html
@@ -1,4 +1,4 @@
-<h1>Course</h1>
+<h1>{{ 'Course' | translate }}</h1>
 
 <div class="panel panel-default">
     <div class="panel-heading">{{$ctrl.course.title}}</div>
