--- a/es5/src/app/components/courses/courses.html
+++ b/es5/src/app/components/courses/courses.html
@@ -1,4 +1,4 @@
-<h1>Courses</h1>
+<h1>{{ 'Courses' | translate }}</h1>
 
 <div ng-if="$ctrl.userRole === 'admin'">
     <div class="panel panel-default">
@@ -45,4 +45,3 @@
         </div>
     </div>
 </div>
-
